--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,50 @@
-Flask
-requests
-SQLAlchemy
-Werkzeug
-Flask_Login
-Flask_SqlAlchemy
-Flask_Migrate
-Flask_Restful
-Flask_Cors
-PyJWT
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-pymysql
-psycopg2-binary
-python_dotenv
-boto3
+alembic==1.14.0
+aniso8601==9.0.1
+blinker==1.9.0
+boto3==1.35.74
+botocore==1.35.74
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+contourpy==1.3.1
+cycler==0.12.1
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-RESTful==0.3.10
+Flask-SQLAlchemy==3.1.1
+fonttools==4.55.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jmespath==1.0.1
+joblib==1.4.2
+jsonify==0.5
+kiwisolver==1.4.7
+Mako==1.3.7
+MarkupSafe==3.0.2
+matplotlib==3.9.3
+numpy==2.1.3
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+psycopg2-binary==2.9.10
+PyJWT==2.10.1
+PyMySQL==1.1.1
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+requests==2.32.3
+s3transfer==0.10.4
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+six==1.17.0
+SQLAlchemy==2.0.36
+threadpoolctl==3.5.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+Werkzeug==3.1.3
