--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
         web:
-                image: flask_2025
+                image: intertravel
                 build: .
                 env_file:
                         - .env # This file is optional; defaults will be used if it does not exist
